# LLM--Agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/lats_langgraph/: agent.py  cli.py  prompts.py  tools.py
src/llm_compiler_langgraph/: __init__.py  agent.py  cli.py  prompts.py
src/plan_execute_langgraph/: agent.py  cli.py  prompts.py  tools.py
src/rewoo_langgraph/: __init__.py  agent.py  cli.py  prompts.py  tools.py
src/self_discover_langgraph/: __init__.py  agent.py  cli.py  prompts.py
